--- a/conf/machine/vcpex86broadband.conf
+++ b/conf/machine/vcpex86broadband.conf
@@ -42,3 +42,5 @@ PREFERRED_VERSION_lighttpd = "1.4.53"
 PREFERRED_VERSION_nmap = "7.80"
 PREFERRED_VERSION_python3-jinja2-native = "3.1.1"
 PREFERRED_PROVIDER_hal-wifi = "hal-wifi-cfg80211"
+
+PREFERRED_PROVIDER_virtual/kernel = "linux-dummy"
